--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4dc39a609a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header>
+    <header class="header">
+        <div class="banner-content">
+            <div class="banner">
+                <h1 class="banner-title inter-font">Let’s Help Those Who Are More In Need</h1>
+                <p class="banner-title-description poppins-font">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                    falli deterruisset. No duo populo animal noluisse, enim</p>
+                <button class="btn-primary inter-font">Donate Now</button>   <button class="watch-video"><i class="fa-solid fa-play" style="color: #707070;"></i> Watch Video</button>
+            </div>
+            <div class="banner-image">
+                <img src="images/Donate1.png" alt="">
+            </div>
+        </div>
 
     </header>
     <main>
@@ -16,6 +35,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
