add donate section also made it responsive

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <div class="banner-content">
             <div class="banner">
                 <h1 class="banner-title inter-font">Let’s Help Those Who Are More In Need</h1>
-                <p class="banner-title-description poppins-font">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                <p class="banner-title-description poppins-font">Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam
                     falli deterruisset. No duo populo animal noluisse, enim</p>
-                <button class="btn-primary inter-font">Donate Now</button>   <button class="watch-video"><i class="fa-solid fa-play" style="color: #707070;"></i> Watch Video</button>
+                <button class="btn-primary inter-font">Donate Now</button> <button class="watch-video"><i
+                        class="fa-solid fa-play" style="color: #707070;"></i> Watch Video</button>
             </div>
             <div class="banner-image">
                 <img src="images/Donate1.png" alt="">
@@ -30,6 +32,30 @@
 
     </header>
     <main>
+        <section class="donate-container">
+            <div class="donate">
+                <div class="section-title inter-font">Donate Today</div>
+                <div class="section-title-description poppins-font" id="donate-description">Lorem ipsum dolor sit amet,
+                    usu
+                    cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</div>
+                <div class="donate-amount">
+                    <div class="fix-amount inter-font">
+                        <p class="amount">100tk</p>
+                        <p class="amount">200tk</p>
+                        <p class="amount">500tk</p>
+                        <p class="amount">1000tk</p>
+                        <p class="amount">5000tk</p>
+                    </div>
+                    <div class="other-amount">
+                        <input type="text" placeholder="Other Amount(Taka)" class="poppins-font">
+                        <hr>
+                        <button class="btn-primary inter-font">Donate Now</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section></section>
 
     </main>
     <footer>
