add donate today also made it responsive

--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
             </div>
 
         </section>
+        <section class="donate-plan">
+            <div class="text-center">
+                <h2 class="section-title inter-font">Our Donate Plan</h2>
+            <p class="section-title-description poppins-font">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+
+            <div class="donate-plan-card-content poppins-font">
+                <div class="donate-plan-card-01">
+                    <img src="icons/food.png" alt="" class="card-image">
+                    <h3 class="card-title">Food for a family</h3>
+                    <p class="card-title-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donate-plan-card-02">
+                    <img src="icons/shelter.png" alt="" class="card-image">
+                    <h3 class="card-title">Shelter for a family</h3>
+                    <p class="card-title-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donate-plan-card-03">
+                    <img src="icons/Frame-1.png" alt="" class="card-image">
+                    <h3 class="card-title">Education for a child</h3>
+                    <p class="card-title-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+
+        </section>
         <section></section>
 
     </main>
