add footer section and this website done for all device

--- a/index.html
+++ b/index.html
@@ -115,9 +115,20 @@
             </div>
 
         </section>
+        <section class="get-update-container text-center">
+            <div class="get-update-content">
+                <h2 class="section-title inter-font">Get My Updates</h2>
+                <p class="section-title-description poppins-font" id="get-update-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="get-update-subscribe inter-font">
+                <input type="email" name="subscribe" id="button" placeholder="Email"><button type="button">Subscribe</button>
+            </div>
+        </section>
 
     </main>
-    <footer>
+    <footer class="inter-font">
+        <h1 class="footer-title">Be Humble</h1>
+        <h3 class="footer-title-description">I’m gonna do it</h3>
 
     </footer>
 
